--- a/t/conf/extra.conf.in
+++ b/t/conf/extra.conf.in
@@ -1,4 +1,10 @@
-<Location /test1>
+<Location /mp>
     SetHandler  perl-script
-    PerlHandler ApachePlugin::Test
+    PerlHandler ApachePlugin::MP
+</Location>
+
+<Location /cgi_compat>
+    SetHandler  perl-script
+    PerlSetVar CAPA_CGI_Compat On
+    PerlHandler ApachePlugin::CGI_compat
 </Location>
