--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 ---
 name: CGI-Application-Plugin-Apache
-version: 0.12
+version: 0.13
 author:
-  - Michael Peters <mpeters@plusthree.com>
+  - 'Michael Peters <mpeters@plusthree.com>'
 abstract: Allow CGI::Application to use Apache::* modules without interference
 license: perl
 resources:
@@ -21,7 +21,10 @@ build_requires:
 provides:
   CGI::Application::Plugin::Apache:
     file: lib/CGI/Application/Plugin/Apache.pm
-    version: 0.12
+    version: 0.13
   CGI::Application::Plugin::Apache::Request:
     file: lib/CGI/Application/Plugin/Apache/Request.pm
-generated_by: Module::Build version 0.2703
+generated_by: Module::Build version 0.2805
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
